@@ -1,6 +1,7 @@
 openbve (1.0.2.0-0buntu1) unreleased; urgency=low
 
   * New upstream version (bugfix release)
+  * debian/rules: tweak to allow easy building of Debug or Release target
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 05 Apr 2009 12:33:10 +0000
 
